@@ -20,7 +20,10 @@
 
 __metaclass__ = type
 
-from cStringIO import StringIO
+try:
+    from cStringIO import StringIO
+except ImportError:
+    from StringIO import StringIO
 
 import yaml
 import genshi
